--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -14,6 +14,7 @@ jobs:
     - uses: actions/checkout@v2
       with:
         submodules: recursive
+        persist-credentials: false
     - name: npm install
       run: npm install
     - name: npm lint
