--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
     "serve:stats": "npm run build:stats && http-server -c-1 dist",
     "start": "webpack serve --progress --config webpack/webpack.config.js",
     "start:anyhost": "webpack serve --progress --config webpack/webpack.config.js --host 0.0.0.0",
-    "update-tle": "node data/tle/update-tle.js",
-    "update-custom-data": "npm run update-tle && bash data/custom/update-custom-data.sh"
+    "update-tle": "node data/tle/update-tle.js"
   },
   "author": "Florian Mauracher",
   "private": true,
