--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -17,6 +17,7 @@ jobs:
         with:
           submodules: recursive
           persist-credentials: false
+          lfs: true
 
       - name: Install
         run: npm install
